Fix canvas element width so prevent horizontal scrolling on small screens. Added negative margin to description to remove tiny gap between description and sketch-holder. Added material description to re-flow installation. Added _site to gitignore.

--- a/style.css
+++ b/style.css
@@ -31,6 +31,15 @@ body {padding: 0; margin: 0;}
     color: white !important;
 }
 
+#mycanvas {
+    width: 100%;
+    height: 120px;
+}
+
+#description {
+    margin-top: -6px;
+}
+
 
 .loadingclass {
     font-family: 'Source Code Pro', monospace;
